1 - use ScreenUtilInit 2 - add font family and wight 3 - create drawer 4 - create home view file

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,5 +1,8 @@
 {
   "language": "English",
-  "app_name": "الدير الاحمر",
-  "lang_code": "العربية"
+  "app_name": "تراث",
+  "lang_code": "العربية",
+  "settings": "الاعدادات",
+  "about": "عنا",
+  "home": "الصفحه الرئيسيه"
 }
