setting view UI

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -4,5 +4,7 @@
   "lang_code": "العربية",
   "settings": "الاعدادات",
   "about": "عنا",
-  "home": "الصفحه الرئيسيه"
+  "home": "الصفحه الرئيسيه",
+  "changeLang" : "تغيير اللغه"
+
 }
