- snapping effect - json data

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -5,6 +5,11 @@
   "settings": "الاعدادات",
   "about": "عنا",
   "home": "الصفحه الرئيسيه",
-  "changeLang" : "تغيير اللغه"
-
+  "changeLang" : "تغيير اللغه",
+  "others1" : "دير العذراء",
+  "others2" : "الدير الأبيض",
+  "others3" : "الدرنكة",
+  "others4" : "ماري جرجس",
+  "others5" : "المحرق",
+  "others6" : "دير الشهداء"
 }
