--- a/lang/en.json
+++ b/lang/en.json
@@ -5,5 +5,11 @@
   "settings": "settings",
   "about": "about",
   "home": "Home",
-  "changeLang" : "change language"
+  "changeLang" : "change language",
+  "others1" : "Azraa Der",
+  "others2" : "White Der",
+  "others3" : "Azraa Dranka",
+  "others4" : "Mary Gerges",
+  "others5" : "Mahraq Der",
+  "others6" : "Alshohadaa Der"
 }
