refactor snsping effect

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -11,5 +11,6 @@
   "others3" : "الدرنكة",
   "others4" : "ماري جرجس",
   "others5" : "المحرق",
-  "others6" : "دير الشهداء"
+  "others6" : "دير الشهداء",
+  "redDer" : "الدير الاحمر"
 }
