--- a/lang/en.json
+++ b/lang/en.json
@@ -11,5 +11,6 @@
   "others3" : "Azraa Dranka",
   "others4" : "Mary Gerges",
   "others5" : "Mahraq Der",
-  "others6" : "Alshohadaa Der"
+  "others6" : "Alshohadaa Der",
+  "redDer" : "Red Monistry"
 }
