add some things in json ar and en and add things to long key

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -12,5 +12,6 @@
   "others4" : "ماري جرجس",
   "others5" : "المحرق",
   "others6" : "دير الشهداء",
-  "redDer" : "الدير الاحمر"
+  "redDer" : "الدير الاحمر",
+  "theEntrance":"المدخل"
 }
