--- a/lang/en.json
+++ b/lang/en.json
@@ -12,5 +12,7 @@
   "others4" : "Mary Gerges",
   "others5" : "Mahraq Der",
   "others6" : "Alshohadaa Der",
-  "redDer" : "Red Monistry"
+  "redDer" : "Red Monistry",
+  "theEntrance": "the Entrance"
+
 }
