finish english of section model

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -13,5 +13,6 @@
   "others5" : "المحرق",
   "others6" : "دير الشهداء",
   "redDer" : "الدير الاحمر",
-  "theEntrance":"المدخل"
+  "theEntrance":"المدخل",
+  "descriptionTheEntrance":"فتحة باب صغيرة تؤدي لدركاة بها جرن أو حوض مغطي بالزجاج حوض االغتسال وكان عادة األديرة عندما تأتي زوار للكنيسة كانوا يستقبلوهم و يغسلون أرجلهم. المدخل بالحجارة وهو من أقدم اجزاء الدير 500م و الحجارة كانت من المدينة الفرعونية التي كانت قبل الدير، وعندما أخذوها زخرفوا عليها زخارف نباتية زهرة االكانتس و هذه الحجارة محتفظة لآلن بالنقوش الفرعونية القديمة " 
 }
