create details view and add bottom namvigation bar

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -39,5 +39,9 @@
   "descriptionDish":"مستطيل الشكل يتكون من ثالث أروقة وكان مسقوف بسقف جمالوني خشبى وكان يقف فيه الشعب المصلى قديما لكن حاليا استخدم جزء الهيكل ككنيسة",
 
   "maddonnaChurch":"كنيسة السيدة العذراء",
-  "descriptionMadonnaChurch":"ترجع للقرن ١٨م، وتوجد ف الجزء الجنوبي الغربي ، و هي بنظام الخوارس، مساحتها صغيرة هيكل و خورس فقط، و سبب تسميتها ب لبن العصفور ألن األشخاص التي تأتي و تصلي و تتبارك منها و تطلب شيئا مستحيال كان يحقق"
+  "descriptionMadonnaChurch":"ترجع للقرن ١٨م، وتوجد ف الجزء الجنوبي الغربي ، و هي بنظام الخوارس، مساحتها صغيرة هيكل و خورس فقط، و سبب تسميتها ب لبن العصفور ألن األشخاص التي تأتي و تصلي و تتبارك منها و تطلب شيئا مستحيال كان يحقق",
+
+  "textAndImages": "النصوص و الصور",
+  "audios": "الصوتيات",
+  "videos": "الفيديوهات"
 }
