--- a/lang/en.json
+++ b/lang/en.json
@@ -41,6 +41,11 @@
   
   
   "maddonnaChurch":"Maddonna church",
-  "descriptionMadonnaChurch":"It dates back to the 18th century, and is found in the southwestern part, and it is in the Khawares system, its area is small in structure and Khors only, and the reason for calling it the birds milk is because the people who come and pray and are blessed from it and ask Something impossible he was achieving"
+  "descriptionMadonnaChurch":"It dates back to the 18th century, and is found in the southwestern part, and it is in the Khawares system, its area is small in structure and Khors only, and the reason for calling it the birds milk is because the people who come and pray and are blessed from it and ask Something impossible he was achieving",
 
+
+  "textAndImages": "Text and images",
+  "audios": "Audios",
+  "videos": "Videos"
+  
 }
