refactor snapping effect part 2

--- a/lang/en.json
+++ b/lang/en.json
@@ -6,12 +6,12 @@
   "about": "about",
   "home": "Home",
   "changeLang" : "change language",
-  "others1" : "Azraa Der",
-  "others2" : "White Der",
+  "others1" : "Azraa Monastery",
+  "others2" : "White Monastery",
   "others3" : "Azraa Dranka",
   "others4" : "Mary Gerges",
-  "others5" : "Mahraq Der",
-  "others6" : "Alshohadaa Der",
+  "others5" : "Mahraq Monastery",
+  "others6" : "Alshohadaa Monastery",
   "redDer" : "Red Monistry",
 
   "theEntrance": "the Entrance",
