starting in page of details

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -45,5 +45,7 @@
 
   "textAndImages": "النصوص و الصور",
   "audios": "الصوتيات",
-  "videos": "الفيديوهات"
+  "videos": "الفيديوهات",
+  
+  "guideVideo" : "فيديو تعريفي"
 }
