--- a/lang/en.json
+++ b/lang/en.json
@@ -47,6 +47,7 @@
 
   "textAndImages": "Text and images",
   "audios": "Audios",
-  "videos": "Videos"
+  "videos": "Videos",
   
+  "guideVideo" : "Guide video"
 }
