--- a/lang/ar.json
+++ b/lang/ar.json
@@ -47,5 +47,6 @@
   "audios": "الصوتيات",
   "videos": "الفيديوهات",
   
-  "guideVideo" : "فيديو تعريفي"
+  "guideVideo" : "فيديو تعريفي",
+  "begin" : "ابدأ الرحلة"
 }
