--- a/lang/en.json
+++ b/lang/en.json
@@ -49,5 +49,6 @@
   "audios": "Audios",
   "videos": "Videos",
   
-  "guideVideo" : "Guide video"
+  "guideVideo" : "Guide video",
+  "begin" : "Start yout tour"
 }
