handle some color in app and change "select a section" Ar or En

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -41,6 +41,8 @@
   "maddonnaChurch":"كنيسة السيدة العذراء",
   "descriptionMadonnaChurch":"ترجع للقرن ١٨م، وتوجد ف الجزء الجنوبي الغربي ، و هي بنظام الخوارس، مساحتها صغيرة هيكل و خورس فقط، و سبب تسميتها ب لبن العصفور ألن األشخاص التي تأتي و تصلي و تتبارك منها و تطلب شيئا مستحيال كان يحقق",
 
+  "selectSection" : "اختار السكشن المناسب",
+
   "textAndImages": "النصوص و الصور",
   "audios": "الصوتيات",
   "videos": "الفيديوهات"
