--- a/lang/ar.json
+++ b/lang/ar.json
@@ -13,33 +13,35 @@
   "others5" : "المحرق",
   "others6" : "دير الشهداء",
   "redDer" : "الدير الاحمر",
+
+
   "theEntrance":"المدخل",
-  "descriptionTheEntrance":"فتحة باب صغيرة تؤدي لدركاة بها جرن أو حوض مغطي بالزجاج حوض االغتسال وكان عادة األديرة عندما تأتي زوار للكنيسة كانوا يستقبلوهم و يغسلون أرجلهم. المدخل بالحجارة وهو من أقدم اجزاء الدير 500م و الحجارة كانت من المدينة الفرعونية التي كانت قبل الدير، وعندما أخذوها زخرفوا عليها زخارف نباتية زهرة االكانتس و هذه الحجارة محتفظة لآلن بالنقوش الفرعونية القديمة " ,
+  "descriptionTheEntrance":"فتحة باب صغيرة تؤدي لدركاة بها جرن أو حوض مغطي بالزجاج حوض االغتسال. المدخل بالحجارة منقولة من الآثار الفرعونية وهو من أقدم اجزاء الدير" ,
 
   "theFort":"الحصن",
-  "descriptionTheFort":"هو مبني عمودي علي الكنيسة و يدخل له من بابان في دركاة المدخل، و هو يستخدم لحماية الرهبان من هجمات البربر قديما، كان يوجد راهب حاد النظر يقف اعلي الحصن كبرج للمراقبة عندما يري اي خطر يقرع الناقوس فيجتمعوا الرهبان في هذا الحصن حتي يزول الخطر يوجد به بئر مياه للشرب، ومكان لتخزين المؤن والطعام، و مغطس حتي فترة كبيرة كان يملؤه الناس بالمياه و ينزلوه و يغطسون به في عيد الغطاس للتبارك منه",
+  "descriptionTheFort":"قامت ببنائه الملكة هيالنة لحمايةالرهبان من خطر البربر",
 
   "tableHall":"صاله المائدة",
-  "descriptionTableHall":"نصل إليها من المدخل الجنوبى وهو المدخل الرئيسى هى مستطيلة الشكل وكانت تستخدم لمائدة اآلغابى ، وعلى يمين الداخل توجد حجرة فيها سلم يؤدى إلى قباب الدير األثرى ، وفوق يوجد مدخلين ضفيرين يؤدى إلى غرفة ناحية اليمين والشمال هذه الغرف رطبة  ف الصيف وساخنة ف الشتاء منعزلة عن الضوضاء",
+  "descriptionTableHall":"نصل إليها من المدخل الجنوبى وهو المدخل الرئيسى هى مستطيلة الشكل وكانت تستخدم لمائدة اآلغابى",
 
   "southTempleRoom":"غرفة الهيكل الجنوبية",
-  "descriptionSouthTempleRoom":"يسمى الضفير و كان يستخدم هذا الممر ف الدورات االحتفالية وأيضا يستخدم ف بداية ليتروجية ويوجد من الناحية الجنوبية من هذا الممر بواقى رسومات الكنيسة األثرية ويوجد به المعمودية األثرية )الجورن( وكان يستخدم لوقت قريب ف المعموديات ولكن حاليا تقام شعائر المعمودية ف الكنائس الحديثة",
+  "descriptionSouthTempleRoom":"كان يوجد بها المعمودية القديمة" ,
   
   "temple":"الهيكل",
-  "descriptionTemple":"نصف القبة الشرقية : تضمنت هذه القبه ثالث مناظر صوره على اربع مراحل مختلفة.\n صف القبة الشمالية : يوجد بها تصويره تمثل العذراء المرضعه وانبياء العهد القديم وهذه االيقونه بالفريسكو تمثل العذراء وهي جالسه ترضع الطفل يسوع . وحولها أنبياء العهد القديم وهما اشعياء و ارمياء و دانيال و حزقيال و بجانبهم تصوير لبطرس الرسولي وبولس الرسولي وسمعان تالميذ المسيح .\nنصف القبة الجنوبية به رسم يمثل السيد المسيح جالسا علي العرش ويشير بيديه بعالمه البداية والنهاية وحوله االنجيليين االربعة واالباء والقديسين والبطاركة.",
+  "descriptionTemple":" يتكون الهيكل من ثالث حنيات يتجلي بهم روعه الفنون القبطية",
   
   
-  "northHulkRoom":"غرفة الهيكل الشرقية",
-  "descriptionNorthHulkRoom":"مثل الممر الجنوبى ف استخدامه ف الدورات االحتفالية وفى طقس القدس يوجد به أيقونات جميلة من ضمنهم أيقونة رائعة للسيد المسيح بشكل مختلف وهى بشنب بدون ذقن ويشير لعالمة البركة ويمسك بالكتاب المقدس و ٢ من المالئكة ف وضع الصالة أو الشفاعه وهم المالك جبرائيل وميخائيل وتسمى  أيقونة الشفاعة",
+  "northHulkRoom":"غرفة الهيكل الشمالية",
+  "descriptionNorthHulkRoom":"محفوظ بها اللوح المقدس القديم وبها صورة للسييد المسيح غير مالوفة",
 
-  "theChurch":"الكنيسة",
-  "descriptionTheChurch":"كان قديما خورس و اصبح االن ككنيسة يقام بها الشعائر الدينية )القداس(، يوجد بعد الدخول من الباب مباشرة في الحائط الجنوبي حامل االيقونات يرجع حوالي من 150 عام كان موضوع أمام الهيكل في فترة من الفترات",
+  "theChurch":"الخورس",
+  "descriptionTheChurch":"قديما كان خورس و حاليا تقام به الطقوس الكنسية",
 
   "dish":"الصحن",
-  "descriptionDish":"مستطيل الشكل يتكون من ثالث أروقة وكان مسقوف بسقف جمالوني خشبى وكان يقف فيه الشعب المصلى قديما لكن حاليا استخدم جزء الهيكل ككنيسة",
+  "descriptionDish":"يوجد بحائطها الشمالي و الغربي الكثير من اليقونات",
 
   "maddonnaChurch":"كنيسة السيدة العذراء",
-  "descriptionMadonnaChurch":"ترجع للقرن ١٨م، وتوجد ف الجزء الجنوبي الغربي ، و هي بنظام الخوارس، مساحتها صغيرة هيكل و خورس فقط، و سبب تسميتها ب لبن العصفور ألن األشخاص التي تأتي و تصلي و تتبارك منها و تطلب شيئا مستحيال كان يحقق",
+  "descriptionMadonnaChurch":"ترجع للقرن 18 م وتسمي بكنيسة لبن العصفور",
 
   "selectSection" : "اختار السكشن المناسب",
 
