create red_monastry view

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -50,5 +50,7 @@
   "videos": "الفيديوهات",
   
   "guideVideo" : "فيديو تعريفي",
-  "begin" : "ابدأ الرحلة"
+  "begin" : "ابدأ الرحلة",
+
+  "redMonasteryDescribtion": "يعد الدير االحمر من أعظم اآلثار القبطية و قد بني علي طراز كنيسة القيامة وينسب الدير لألنبا بيجول و األنبا بشاى وقد سمي بالدير األحمر النه بني من الطوب االحمر كما ان كنيسة الدير األحمر هي الكنيسة األولي بمصر و حوض البحر المتوسط من حيث كم االيقونات حيث تغطي االيقونات %80 من الهيكل"
 }
