create describtion screen add langKeys

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -48,9 +48,16 @@
   "textAndImages": "النصوص و الصور",
   "audios": "الصوتيات",
   "videos": "الفيديوهات",
+  "description" : "الوصف",
   
   "guideVideo" : "فيديو تعريفي",
   "begin" : "ابدأ الرحلة",
 
-  "redMonasteryDescribtion": "يعد الدير االحمر من أعظم اآلثار القبطية و قد بني علي طراز كنيسة القيامة وينسب الدير لألنبا بيجول و األنبا بشاى وقد سمي بالدير األحمر النه بني من الطوب االحمر كما ان كنيسة الدير األحمر هي الكنيسة األولي بمصر و حوض البحر المتوسط من حيث كم االيقونات حيث تغطي االيقونات %80 من الهيكل"
+  "redMonasteryDescribtion": "يعد الدير االحمر من أعظم اآلثار القبطية و قد بني علي طراز كنيسة القيامة وينسب الدير لألنبا بيجول و األنبا بشاى وقد سمي بالدير األحمر النه بني من الطوب االحمر كما ان كنيسة الدير األحمر هي الكنيسة األولي بمصر و حوض البحر المتوسط من حيث كم االيقونات حيث تغطي االيقونات %80 من الهيكل",
+  
+  "almadkhal" : "فتحة باب صغيرة تؤدي لدركاة بها جرن أو حوض مغطي بالزجاج ' حوض األغتسال' وكان عادة األديرة عندما يأتي زوار للكنيسة كانوا يستقبلوهم و يغسلون أرجلهم. المدخل مبني بالحجارة وهو من أقدم اجزاء الدير من 500م و الحجارة كانت من المدينة الفرعونية التي كانت قبل الدير وعندما أخذوها زخرفوا عليها زخارف نباتية مثل زهرة االكانتس و هذه الحجارة محتفظة الي األن بالنقوش الفرعونية القديمة.",
+  "alhesn" : "هو مبني عمودي علي الكنيسة و يدخل له من بابان في دركاة المدخل ينسب للملكة هيالنة والدة االمبراطور قسطنطين الكبير حيث امرت بإنشائه لحمايه الرهبان من هجمات البربر، حيث كان يقف راهب حاد النظر اعلي الحصن للمراقبة و عندما يري اي خطر يقرع الناقوس فيجتمعوا الرهبان في هذا الحصن حتي يزول الخطر يوجد به بئر مياه للشرب ومكان لتخزين المؤن والطعام، و مغطس حتي فترة كبيرة كان يملؤه الناس بالمياه و ينزلوه ويغطسون به في عيد الغطاس وحاليا يوجد في الحجرات السفلية بعض القطع التي وجدت بالدير و صور لمراحل ترميم الدير و للرحالة الذين اتوا لزيارته"
+  
+
+
 }
