drawer completed contact page created about page editing

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -73,6 +73,7 @@
 
   "levelOne":"المستوى الأول",
   "levelTwo":"المستوى الثانى",
-  "qoba" : "القبة"
-
+  "qoba" : "القبة",
+  "aboutTurathTeam" : "نحن فريق تراث نسعى لاستخدام الانفوجرافيك لتبسيط فهم المعلومات الأثرية وجعلها أكثر جاذبية وزيادة الوعي الأثري لدى الشباب.",
+  "contactWithUs" : "تواصل معنا"
 }
