--- a/lang/en.json
+++ b/lang/en.json
@@ -73,5 +73,8 @@
 
   "levelOne":"level One",
   "levelTwo":"level Two",
-  "qoba" : "Dome"
+  "qoba" : "Dome",
+  "aboutTurathTeam" : "We are a heritage team striving to use infographics to simplify the understanding of archaeological information, make it more attractive, and increase archaeological awareness among young people.",
+  "contactWithUs" : "Contact with"
+
 }
