--- a/lang/ar.json
+++ b/lang/ar.json
@@ -45,7 +45,7 @@
 
   "selectSection" : "اختر السكشن ",
 
-  "textAndImages": "النصوص و الصور",
+  "pictures": "الصور",
   "audios": "الصوتيات",
   "videos": "الفيديوهات",
   "description" : "الوصف",
