--- a/lang/en.json
+++ b/lang/en.json
@@ -1,11 +1,11 @@
 {
   "language": "العربية",
-  "app_name": "turath",
+  "app_name": "Turath",
   "lang_code": "English",
-  "settings": "settings",
-  "about": "about",
+  "settings": "Settings",
+  "about": "About",
   "home": "Home",
-  "changeLang" : "change language",
+  "changeLang" : "Change language",
   "others1" : "Azraa Monastery",
   "others2" : "White Monastery",
   "others3" : "Azraa Dranka",
@@ -45,10 +45,10 @@
 
   "selectSection": "Select A Section",
 
-  "textAndImages": "Text and images",
+  "pictures": "Pictures",
   "audios": "Audios",
   "videos": "Videos",
-  "description" : "description",
+  "description" : "Description",
   
   "guideVideo" : "Guide video",
   "begin" : "Start yout tour",
