change in ar json

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -16,7 +16,7 @@
 
 
   "theEntrance":"المدخل",
-  "descriptionTheEntrance":"فتحة باب صغيرة تؤدي لدركاة بها جرن أو حوض مغطي بالزجاج حوض الأغتسال. المدخل بالحجارة منقولة من الآثار الفرعونية وهو من أقدم اجزاء الدير" ,
+  "descriptionTheEntrance":"فتحة باب صغيرة تؤدي لدركاة بها جرن أو حوض مغطي بالزجاج حوض الأغتسال. المدخل بالحجارة منقولة من الآثار الفرعونية " ,
 
   "theFort":"الحصن",
   "descriptionTheFort":"قامت ببنائه الملكة هيالنة لحمايةالرهبان من خطر البربر",
@@ -53,7 +53,7 @@
   "guideVideo" : "فيديو تعريفي",
   "begin" : "ابدأ الرحلة",
 
-  "redMonasteryDescribtion": "يعد الدير االحمر من أعظم الآثار القبطية و قد بني علي طراز كنيسة القيامة وينسب الدير للأنبا بيجول و الأنبا بشاى وقد سمي بالدير الأحمر لأنه بني من الطوب الأحمر كما أن كنيسة الدير الأحمر هي الكنيسة الأولى بمصر و حوض البحر المتوسط من حيث كم الأيقونات حيث تغطي الأيقونات %80 من الهيكل",
+  "redMonasteryDescribtion": "يعد الدير الأحمر من أعظم الآثار القبطية و قد بني علي طراز كنيسة القيامة وينسب الدير للأنبا بيجول و الأنبا بشاى وقد سمي بالدير الأحمر لأنه بني من الطوب الأحمر كما أن كنيسة الدير الأحمر هي الكنيسة الأولى بمصر و حوض البحر المتوسط من حيث كم الأيقونات حيث تغطي الأيقونات %80 من الهيكل",
   
 
   "almadkhal" : "فتحة باب صغيرة تؤدي لدركاة بها جرن أو حوض مغطي بالزجاج ' حوض الأغتسال' وكان عادة الأديرة عندما يأتي زوار للكنيسة كانوا يستقبلوهم و يغسلون أرجلهم. المدخل مبني بالحجارة وهو من أقدم اجزاء الدير من 500م و الحجارة كانت من المدينة الفرعونية التي كانت قبل الدير وعندما أخذوها زخرفوا عليها زخارف نباتية مثل زهرة الأكانتس و هذه الحجارة محتفظة إلى الآن بالنقوش الفرعونية القديمة.",
