--- a/lang/en.json
+++ b/lang/en.json
@@ -15,7 +15,7 @@
   "redDer" : "Red Monistry",
 
   "theEntrance": "The Entrance",
-  "descriptionTheEntrance": "A small door opening leading to a sink containing a basin or basin covered with glass, such as a wash basin. The entrance is made of stones taken from Pharaonic antiquities, and it is one of the oldest parts of the monastery ",
+  "descriptionTheEntrance": "A small door opening leading to a sink containing a basin or basin covered with glass, such as a wash basin. The entrance is made of stones taken from Pharaonic antiquities ",
 
   "theFort":"The Fort",
   "descriptionTheFort":"It was built by Queen Helena to protect the monks from the danger of the Berbers",
