changes in ar and en json

--- a/lang/en.json
+++ b/lang/en.json
@@ -43,7 +43,7 @@
   "maddonnaChurch":"Maddonna church",
   "descriptionMadonnaChurch":"Dating back to the 18th century, it is called the Church of Saint Bird's Milk.s",
 
-  "selectSection": "Select A Section",
+  "selectSection": "Explore the wonders of the ancient world in a new way",
 
   "pictures": "Pictures",
   "audios": "Audios",
