--- a/lang/ar.json
+++ b/lang/ar.json
@@ -43,7 +43,7 @@
   "maddonnaChurch":"كنيسة السيدة العذراء",
   "descriptionMadonnaChurch":"ترجع للقرن 18 م وتسمي بكنيسة لبن العصفور",
 
-  "selectSection" : "اختر السكشن ",
+  "selectSection" : "استكشف عجائب العالم القديم بأسلوب جديد",
 
   "pictures": "الصور",
   "audios": "الصوتيات",
