change two bottm ,  ar.json  and en.json

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -51,7 +51,7 @@
   "description" : "الوصف",
   
   "guideVideo" : "فيديو تعريفي",
-  "begin" : "ابدأ الرحلة",
+  "begin" : "استعد لرحلة لا تُنسى في عالم الآثار والتراث",
 
   "redMonasteryDescribtion": "يعد الدير الأحمر من أعظم الآثار القبطية و قد بني علي طراز كنيسة القيامة وينسب الدير للأنبا بيجول و الأنبا بشاى وقد سمي بالدير الأحمر لأنه بني من الطوب الأحمر كما أن كنيسة الدير الأحمر هي الكنيسة الأولى بمصر و حوض البحر المتوسط من حيث كم الأيقونات حيث تغطي الأيقونات %80 من الهيكل",
   
