--- a/lang/en.json
+++ b/lang/en.json
@@ -51,7 +51,7 @@
   "description" : "Description",
   
   "guideVideo" : "Guide video",
-  "begin" : "Start yout tour",
+  "begin" : "Get ready for an unforgettable journey into the world of archeology and heritage",
 
   "redMonasteryDescribtion": "The Red Monastery is one of the greatest Coptic monuments and was built in the style of the Church of the Holy Sepulchre and the monastery is attributed to Alenba Bijul and Alnaba Tea has been called the Red Monastery built of red bricks and the Church of the Red Monastery is the first church in Egypt and the Mediterranean basin in terms of the amount of icons where the icons cover 80% of the structure",
 
